--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-site_title = "MyArxiv"
+site_title = "Reasoning Arxiv Daily Feed"
 limit_days = 7
-cache_url = "https://mlnlp-world.github.io/MyArxiv/cache.json"
+cache_url = "https://andyjzhao.github.io/ReasoningArxiv/cache.json"
 
 [[sources]]
 limit = 150
